--- a/sts_workspace/hello-spring/src/main/resources/application.yml
+++ b/sts_workspace/hello-spring/src/main/resources/application.yml
@@ -39,13 +39,17 @@ app:
                #파일 확장자 가릴경우 true
                enable: true
        available-file-list:
-           audio/aac,
-           video/x-msvideo,
-           text/css,
-           text/csv,
-           application/msword,
-           image/gif,
-           text/html,
-           image/jpeg,
-           application/json,
-           audio/midi
+           handler: tika
+           enable: true
+           list:
+               audio/aac,
+               video/x-msvideo,
+               text/css,
+               text/csv,
+               application/msword,
+               image/gif,
+               text/html,
+               image/jpeg,
+               application/json,
+               audio/midi,
+               application/x-tika-ooxml
