게시판만들기(댓글과 대댓글 등록삭제추천추가 기능 에러 수정, Pagination)

--- a/sts_workspace/hello-spring/src/main/resources/application.yml
+++ b/sts_workspace/hello-spring/src/main/resources/application.yml
@@ -36,7 +36,7 @@ app:
             /ajax/member/regist/**,
             /member/success-delete-me,
             /member/fail-delete-me,
-            /board/list,
+            /board/search,
             /js/**,
             /css/**,
             /error/**
