게시판만들기(관리자권한 추가, css 추가)

--- a/sts_workspace/hello-spring/src/main/resources/application.yml
+++ b/sts_workspace/hello-spring/src/main/resources/application.yml
@@ -32,6 +32,7 @@ app:
         ignore-url-patterns:
             /member/login,
             /ajax/member/login,
+            /ajax/menu/list,
             /member/regist/**,
             /ajax/member/regist/**,
             /member/success-delete-me,
